Fix post contents overflowing container with short comment

--- a/client/post/post.styl
+++ b/client/post/post.styl
@@ -18,7 +18,8 @@
         cursor pointer
     
     header
-        flex 0 0 116px
+        flex 0 0 @min-width
+        min-width 116px
         padding 16px
         display flex
         flex-flow column wrap
@@ -66,5 +67,6 @@
                 border-left 4px solid #f33
         
     .options
-        flex 0 0 116px
+        flex 0 0 @min-width
+        min-width 116px
         padding 16px
